Upload CV and Submit With job Complete

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,7 @@
 MONGO_URI=mongodb+srv://rishisrmscet:bH23yIrZEOZOAbDa@cluster0.tbiku.mongodb.net/
 SECRET_KEY=Rishi123
 PORT=4000
+
+CLOUDINARY_CLOUD_NAME= dx4ctlu0h
+CLOUDINARY_API_KEY= 764993959267655
+CLOUDINARY_API_SECRET=Ar54no2NM2REQUvoiAhTYOHndjM
