--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^6.4.7",
     "axios": "^1.8.1",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
