--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.1",
     "cloudinary": "^2.5.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.5.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "react": "^19.0.0",
