--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,6 @@ PORT=4000
 CLOUDINARY_CLOUD_NAME= dx4ctlu0h
 CLOUDINARY_API_KEY= 764993959267655
 CLOUDINARY_API_SECRET=Ar54no2NM2REQUvoiAhTYOHndjM
+
+EMAIL_USER=rishisrmscet@gmail.com
+EMAIL_PASS=aktv wrxv gxlx yacj
