changed Background color

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://rishisrmscet:bH23yIrZEOZOAbDa@cluster0.tbiku.mongodb.net/
+MONGO_URI=mongodb+srv://rishisrmscet:s71lmfBcjwg2tmxy@cluster0.qebeqeq.mongodb.net/
 SECRET_KEY=Rishi123
 PORT=4000
 
